[package]
name = "web-rpg"
version = "0.1.0"
authors = ["Selenologist <selenologist@users.noreply.github.com>"]

[dependencies]
futures      = "0.1.21"
tokio-core   = "0.1.16"
sha2         = "0.7.0"
srp          = "0.2.4"
base64       = "0.9.0"
serde        = {version = "1.0.27", features = ["rc"]}
serde_json   = "1.0.11"
serde_derive = "1.0"
lodepng      = "2.0.0"
log          = "0.4.1"
env_logger   = "0.5.5"
rpds = {version = "0.5.0", features = ["serde"] }
lru-cache    = "0.1.1"
sodiumoxide  = "0.0.16"
