[package]
name = "hashtree_game"
version = "0.1.0"
authors = ["Selenologist <selenologist@users.noreply.github.com>"]

[dependencies]
futures      = "0.1.21"
tokio-core   = "0.1.16"
sha2         = "0.7.0"
base64       = "0.9.0"
serde        = {version = "1.0.27", features = ["rc"]}
serde_json   = "1.0.14"
rmp          = "0.8.7"
rmpv         = "0.4.0"
rmp-serde    = "0.13.7"
serde_derive = "1.0"
log          = "0.4.1"
env_logger   = "0.5.5"
rpds         = {version = "0.5.0", features = ["serde"] }
lru-cache    = "0.1.1"
sodiumoxide  = "0.0.16"
clap         = "2.31.2"
chrono       = "0.4.2"
text_io      = "0.1.7"
ws           = "0.7.6"
rand         = "0.4.2"
hyper        = "0.11.25"
mime         = "0.3.5"
regex        = "0.2.10"
lazy_static  = "1.0.0"
notify       = "4.0.0"
subprocess   = "0.1.12"
sled         = "0.15.14"
